--- a/code-challenge/Pipfile
+++ b/code-challenge/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "2.2.2"
+flask = "3.0.1"
 flask-migrate = "3.1.0"
-flask-sqlalchemy = "3.0.3"
+Flask-SQLAlchemy = "3.0.3"
+flask-cors = "*"
 
 [dev-packages]
 
